# licdata

./: .gitattributes  .gitignore  143002368488-licdata-prod-eu-west-1-policy.json  README.md  aws_requirements.txt  clients.json  licenses.json  notes.org  package-lock.json  package.json  pcs.json  requirements.txt  sample-enc.txt  serverless.yml  test.txt
rest/: Dockerfile  aws-policy.json  create_zip.sh  flake.nix  host.json  pyproject.toml  pyprojecttoml.template  requirements.txt
rest/CreateClient/: __init__.py  function.json  function_app.py
rest/application/: licdata.py
rest/domain/: client.py  client_repo.py  incident.py  incident_repo.py  license.py  license_repo.py  order.py  order_repo.py  pc.py  pc_repo.py  prelicense.py  prelicense_repo.py  product.py  product_repo.py  product_type.py  product_type_repo.py  user.py  user_repo.py
rest/infrastructure/: crypt_utils.py
rest/infrastructure/aws_lambda/: mail.py  params.py  resp.py  rest.py
rest/infrastructure/aws_lambda/clients/: common.py  create.py  delete.py  find_by_id.py  list.py  update.py
rest/infrastructure/aws_lambda/incidents/: common.py  create.py  delete.py  list.py  (+2 more)
rest/infrastructure/github/: github_access.py  github_adapter.py  github_client_repo.py  github_incident_repo.py  github_license_repo.py  github_order_repo.py  github_pc_repo.py  github_prelicense_repo.py  github_product_repo.py  github_product_type_repo.py  github_raw.py  github_repo.py  github_user_repo.py
rest/nix/: devShell.nix
rest/org/: __init__.py
rest/org/acmsl/: __init__.py
rest/templates/: banner.py.template
(+871 files in other folders)
